[feat] Navbar, Link-card 페이지 간 이동 기능 추가

--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-.container {
-    padding: 100px 150px 100px 150px;
-    margin: auto;
-}
-
 .card-title {
     color: white;
     text-shadow: -1px 0px #373150, 0px 1px #373150, 1px 0px #373150, 0px -1px #373150;
@@ -13,6 +8,7 @@
 }
 
 .link-card {
+    cursor: pointer;
     display: block;
     height: 270px;
     overflow: hidden;
