--- a/css/common.css
+++ b/css/common.css
@@ -51,18 +51,19 @@ h6 {
     height: 90px;
     display: flex;
     align-items: center;
-    padding-left: 20px;
-    padding-right: 20px;
     box-shadow: 0px 7px 5px 0px rgba(55, 49, 80, 0.2);
     -webkit-box-shadow: 0px 7px 5px 0px rgba(55, 49, 80, 0.2);
     -moz-box-shadow: 0px 7px 5px 0px rgba(55, 49, 80, 0.2);
 }
-.nav-container > .fs-title {
-    margin-left: 30px;
-    margin-right: 50px;
+
+.nav-title {
+    cursor: pointer;
+    height: 100%;
+    padding: 20px 30px 20px 30px;
 }
 
 .nav-btn {
+    cursor: pointer;
     width: 150px;
     height: 100%;
     padding-left: 20px;
@@ -76,6 +77,11 @@ h6 {
 }
 .nav-btn:hover > p {
     color: white;
+}
+
+.container {
+    padding: 50px 150px 100px 150px;
+    margin: auto;
 }
 
 footer {
