--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,18 +4,18 @@
     display: flex;
 }
 
-.img-container {
+.contacts-img-container {
     width: 33%;
     height: 100%;
     overflow: hidden;
 }
 
-.img-container>img {
+.contacts-img-container>img {
     position: relative;
     right: 470px;
 }
 
-.card-container {
+.contacts-card-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
