--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
     transition: all 0.5s;
 }
 
-.link-card {
+.index-link-card {
     cursor: pointer;
     display: block;
     height: 270px;
@@ -17,11 +17,11 @@
     border: 0px solid white;
 }
 
-.link-card:hover {
+.index-link-card:hover {
     border-radius: 30px;
     border: 10px solid white;
 }
-.link-card:hover>.card-title {
+.index-link-card:hover>.card-title {
     top: 50px;
     left: 60px;
 }
